--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,7 +12,7 @@
 
 @use 'abstracts';
 @use 'base';
-// @use 'components';
-// @use 'layout';
+@use 'components';
+@use 'layout';
 // @use 'pages';
 // @use 'vendors';
