--- a/src/scss/pages/home/_index.scss
+++ b/src/scss/pages/home/_index.scss
@@ -1,2 +1,7 @@
 @forward 'section-hero';
 @forward 'section-one';
+@forward 'section-two';
+@forward 'section-three';
+@forward 'section-four';
+@forward 'section-five';
+@forward 'section-six';
