--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -44,6 +44,15 @@
     a {
       color: white;
     }
+
+    > li {
+      display: inline-block;
+      margin-right: 20px;
+
+      &:last-child {
+        margin-right: 0;
+      }
+    }
   }
 }
 
