--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -10,7 +10,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 60px;
+  padding: 24px 60px;
 
   a {
     text-decoration: none;
