--- a/src/scss/abstracts/_colors.scss
+++ b/src/scss/abstracts/_colors.scss
@@ -8,8 +8,10 @@ $d1: #636363 !default;
 // Main Colors
 $m1: #142D47 !default;
 $m2: #B28D52 !default;
+$m3: #D3C6B0 !default;
 
 // Shade Colors
 $s0: #000000 !default;
 $s1: #142D47 !default;
 $s2: #F8F8F8 !default;
+$s3: #CFCFCF !default;
