--- a/src/scss/pages/home/_section-four.scss
+++ b/src/scss/pages/home/_section-four.scss
@@ -16,6 +16,13 @@
 }
 
 .section-entry {
+  font-size: 16px;
+  line-height: 24px;
   color: white;
   max-width: 360px;
+
+  h2,
+  h3 {
+    color: white;
+  }
 }
