--- a/src/scss/pages/home/_section-hero.scss
+++ b/src/scss/pages/home/_section-hero.scss
@@ -6,10 +6,29 @@
 }
 
 .hero-info {
-  background-color: colors.$m1;
+  font-size: 14px;
+  line-height: 1.5;
+  background-color: rgba(colors.$m1, 0.7);
   color: white;
+  padding: 1rem;
   position: absolute;
   right: 80px;
   bottom: 80px;
   z-index: 10;
+  text-align: right;
+
+  h2 {
+    font-size: 34px;
+    line-height: 1.2;
+    margin-bottom: 20px;
+  }
+
+  p {
+    margin-bottom: 15px;
+
+    &:last-child {
+      font-size: 22px;
+      margin-bottom: 0;
+    }
+  }
 }
