--- a/src/scss/pages/home/_section-three.scss
+++ b/src/scss/pages/home/_section-three.scss
@@ -1,13 +1,18 @@
 @use '../../abstracts/colors';
+@use '../../abstracts/breakpoints';
+@use '../../abstracts/mixins';
 
 .section-three {
   background-color: colors.$s2;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-  max-height: 315px;
   padding: 1rem;
+
+  @include mixins.breakpoint(breakpoints.$bp-mobile) {
+    height: 100vh;
+    max-height: 315px;
+  }
 }
 
 .section-container {
