--- a/src/scss/pages/home/_section-four.scss
+++ b/src/scss/pages/home/_section-four.scss
@@ -1,3 +1,6 @@
+@use '../../abstracts/breakpoints';
+@use '../../abstracts/mixins';
+
 .section-info {
   display: flex;
   align-items: center;
@@ -19,7 +22,10 @@
   font-size: 16px;
   line-height: 24px;
   color: white;
-  max-width: 360px;
+
+  @include mixins.breakpoint(breakpoints.$bp-mobile) {
+    max-width: 360px;
+  }
 
   h2,
   h3 {
