--- a/src/scss/pages/home/_section-hero.scss
+++ b/src/scss/pages/home/_section-hero.scss
@@ -1,4 +1,6 @@
 @use '../../abstracts/colors';
+@use '../../abstracts/breakpoints';
+@use '../../abstracts/mixins';
 
 .hero {
   margin-bottom: 100px;
@@ -16,8 +18,8 @@
   color: white;
   padding: 1rem;
   position: absolute;
-  right: 80px;
-  bottom: 80px;
+  right: 0;
+  bottom: 50px;
   z-index: 10;
   text-align: right;
 
@@ -34,5 +36,10 @@
       font-size: 22px;
       margin-bottom: 0;
     }
+  }
+
+  @include mixins.breakpoint(breakpoints.$bp-mobile) {
+    right: 80px;
+    bottom: 80px;
   }
 }
