--- a/src/scss/pages/home/_section-one.scss
+++ b/src/scss/pages/home/_section-one.scss
@@ -1,17 +1,34 @@
+@use '../../abstracts/mixins';
+
 .section-one {
   margin-bottom: 100px;
   padding: 0 1rem;
 
   .container {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    flex-direction: column;
     max-width: 1110px;
   }
 
   .card {
     flex: 1;
-    max-width: 350px;
-    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 10px;
+    max-width: 690px;
+  }
+
+  @include mixins.breakpoint(1110px) {
+    
+    .container {
+      flex-direction: row;
+      justify-content: space-between;
+    }
+
+    .card {
+      margin-bottom: 0;
+      max-width: 350px;
+      width: 100%;
+    }
   }
 }
