--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -58,6 +58,14 @@
 
 .main-navigation {
 
+  > div {
+    display: none;
+
+    @include mixins.breakpoint(breakpoints.$bp-tablet) {
+      display: block;
+    }
+  }
+
   // This is the UL
   .nav-menu {
     margin: 0;
@@ -84,6 +92,35 @@
 
       &:last-child {
         margin-right: 0;
+      }
+    }
+  }
+
+  &.toggled {
+    > div {
+      display: block;
+      background-color: colors.$m1;
+      height: 100vh;
+      padding: 1rem;
+      position: absolute;
+      top: 90px;
+      left: 0;
+      z-index: 20;
+      width: 100%;
+    }
+
+    .nav-menu {
+
+      > li {
+        display: block;
+        border-top: 1px solid white;
+        border-bottom: 1px solid white;
+        margin: 0;
+
+        a {
+          display: block;
+          padding: 20px 0;
+        }
       }
     }
   }
@@ -123,11 +160,82 @@
       }
     }
   }
+
+  &.focus {
+    .sub-menu {
+      display: block;
+      background-color: transparent;
+      position: relative;
+      top: 0;
+
+      > li {
+
+        a {
+          color: white;
+          padding: 15px 0;
+        }
+      }
+    }   
+  }
 }
 
 // Mobile Toggle
 // ================================
 
 .menu-toggle {
-  display: none;
+  font-size: 0;
+  background-color: transparent;
+  border: 0;
+  color: transparent;
+  position: relative;
+  width: 30px;
+  height: 30px;
+
+  &:hover {
+    cursor: pointer;
+  }
+  
+  &::before,
+  &::after {
+    content: '';
+    background-color: rgba(255,255,255,0.5);
+    width: 90%;
+    height: 2px;
+    position: absolute;
+    transition: 0.3s ease;
+  }
+
+  &::before {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(0deg);
+    transform-origin: 50% 50%;
+    margin-top: -10px;
+  }
+  
+  &::after {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(0deg);
+    transform-origin: 50% 50%;
+    box-shadow: 0 10px 0 0 rgba(255,255,255,0.5);
+  }
+
+  @include mixins.breakpoint(breakpoints.$bp-tablet) {
+    display: none;
+  }
+}
+
+.toggled {
+  .menu-toggle {
+    &::before {
+      margin-top: 0;
+      transform: translate(-50%, -50%) rotate(135deg);
+    }
+    
+    &::after {
+      transform: translate(-50%, -50%) rotate(-135deg);
+      box-shadow: none;
+    }
+  }
 }
