--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -175,7 +175,13 @@
           padding: 15px 0;
         }
       }
-    }   
+    }
+
+    @include mixins.breakpoint(breakpoints.$bp-tablet) {
+      .sub-menu {
+        display: none;
+      }
+    }
   }
 }
 
