--- a/src/scss/pages/home/_section-four.scss
+++ b/src/scss/pages/home/_section-four.scss
@@ -16,6 +16,10 @@
   max-width: 1140px;
   padding: 1rem;
   width: 100%;
+
+  @include mixins.breakpoint(1500px) {
+    max-width: 1400px;
+  }
 }
 
 .section-entry {
@@ -25,6 +29,10 @@
 
   @include mixins.breakpoint(breakpoints.$bp-mobile) {
     max-width: 360px;
+  }
+
+  @include mixins.breakpoint(1500px) {
+    max-width: 467px;
   }
 
   h2,
