--- a/src/scss/pages/home/_section-three.scss
+++ b/src/scss/pages/home/_section-three.scss
@@ -42,6 +42,7 @@
 
   blockquote {
     font-size: 45px;
+    line-height: 1.2;
     font-weight: bold;
     color: colors.$m1;
     text-align: center;
