--- a/src/scss/pages/home/_section-six.scss
+++ b/src/scss/pages/home/_section-six.scss
@@ -33,7 +33,8 @@
   }
 
   .quote-text {
-    font-size: 28px!important;
+    font-size: 45px!important;
+    line-height: 1.2;
     font-weight: bold;
     color: colors.$m1;
 
