--- a/src/scss/util/_helper.scss
+++ b/src/scss/util/_helper.scss
@@ -27,3 +27,11 @@
 .img-responsive {
   max-width: 100%;
 }
+
+.primary-text {
+  color: colors.$m2;
+}
+
+.search-page-disclaimer {
+  font-size: 11px;
+}
