--- a/src/scss/base/_global.scss
+++ b/src/scss/base/_global.scss
@@ -35,3 +35,17 @@ p {
 h1 {
   color: colors.$m1;
 }
+
+hr {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  border: 0;
+  border-top: 1px solid #eeeeee;
+}
+
+.list-unstyled {
+  padding-left: 0;
+  list-style: none;
+  margin-top: 0;
+  margin-bottom: 16px;
+}
