--- a/src/scss/layout/_grid.scss
+++ b/src/scss/layout/_grid.scss
@@ -4,6 +4,11 @@
   gap: 30px;
   margin: auto auto 60px;
   // max-width: 1140px;
+
+  a {
+    color: inherit;
+    text-decoration: none;
+  }
 }
 
 .grid-filters {
