--- a/src/scss/pages/property/_sidebar.scss
+++ b/src/scss/pages/property/_sidebar.scss
@@ -44,7 +44,12 @@
 
   .row {
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
+
+    @media (min-width: 600px) {
+      flex-direction: row;
+    }
   }
 
   .bid-schedule {
