--- a/src/scss/layout/_grid.scss
+++ b/src/scss/layout/_grid.scss
@@ -1,9 +1,24 @@
+@use "../abstracts/mixins";
+@use "../abstracts/breakpoints";
+
 .auction-grid {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(1, 1fr);
   gap: 30px;
   margin: auto auto 60px;
   // max-width: 1140px;
+
+  @include mixins.breakpoint(breakpoints.$bp-mobile) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  @include mixins.breakpoint(breakpoints.$bp-tablet) {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  @include mixins.breakpoint(1150px) {
+    grid-template-columns: repeat(4, 1fr);
+  }
 
   a {
     color: inherit;
@@ -19,8 +34,12 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  width: 255px;
+  width: 100%;
   height: 218px;
+
+  @include mixins.breakpoint(1150px) {
+    width: 255px;
+  }
 }
 
 .grid-info {
